fix icon alignment
- fixes the alignment of icons on linux-based systems

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -2966,14 +2966,14 @@ input:checked + .genki_pseudo_checkbox:after { font-size:14px; }
 .gu-mirror{position:fixed!important;margin:0!important;z-index:9999!important;opacity:.8;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";filter:alpha(opacity=80)}.gu-hide{display:none!important}.gu-unselectable{-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important;user-select:none!important}.gu-transit{opacity:.2;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";filter:alpha(opacity=20)}
 
 
-/* OS FIXES */
-.os-linux .sectionNumber3rd, .os-linux #quick-jisho-toggle {
+/* OS FIXES:DISABLED */
+/*.os-linux .sectionNumber3rd, .os-linux #quick-jisho-toggle {
   line-height:normal;
 }
 
 .os-linux .sectionNumber3rd.fa {
   line-height:22px;
-}
+}*/
 
 
 /* RESPONSIVENESS */
